--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,6 @@ neo4j==5.16.0
 networkx==3.2.1
 pydantic==2.5.3
 python-dotenv==1.0.0
+
+edgartools  # For SEC EDGAR filings and extractions
+usaspending-orm  # For USA Spending contract queries
