API response structure improved for frontend, docs updated, modular ingestion, logging, config, risk forecasting, Neo4j sync endpoints

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,20 @@ BACKEND_PORT=8000
 
 # Frontend Configuration
 FRONTEND_PORT=3000
+
+# Security Best Practices
+# 1. Never commit this file with real credentials to version control.
+# 2. Change default passwords before deploying to production.
+# 3. Use strong, unique secrets for NEO4J_PASSWORD and any API keys.
+# 4. Store sensitive secrets in a secure vault or environment manager in production.
+# 5. Restrict network access to backend and database services in production.
+# 6. Rotate credentials regularly and audit access.
+# 7. Remove unused environment variables.
+
+# Finnhub API
+FINNHUB_API_KEY=your_finnhub_api_key_here
+FINNHUB_SECRET=your_finnhub_secret_here
+
+# Data file paths (optional, defaults used if not set)
+NODES_FILE=usaspending_nodes.json
+EDGES_FILE=usaspending_edges.json
