--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,3 +26,11 @@ CMD ["nginx", "-g", "daemon off;"]
 # COPY nginx.conf /etc/nginx/conf.d/default.conf
 # EXPOSE 80
 # CMD ["nginx", "-g", "daemon off;"]
+
+# Security Best Practices
+# 1. Do not hardcode secrets in Dockerfiles. Use environment variables or secret managers.
+# 2. Avoid exposing sensitive ports to the public internet.
+# 3. Use minimal base images and keep dependencies up to date.
+# 4. Remove build tools and caches after installation to reduce image size and attack surface.
+# 5. Set proper file permissions for application code and config files.
+# 6. Use multi-stage builds for frontend to avoid leaking source code in production images.
