--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
 # Testing and data source dependencies for CI
 pytest==8.0.0
-sec-edgar-downloader==5.0.3
+pyrate-limiter==3.2.0  # Pin for sec-edgar-downloader compatibility
+sec-edgar-downloader==4.3.0  # Downgrade for pyrate-limiter compatibility
+ pydantic==2.5.3
+ pyrate-limiter==3.2.0  # Pin for sec-edgar-downloader compatibility
 fastapi==0.109.1
 uvicorn[standard]==0.27.0
 neo4j==5.16.0
 networkx==3.2.1
-pydantic==2.5.3
 python-dotenv==1.0.0
 httpx==0.27.0
-edgartools==4.4.0  # For SEC EDGAR filings and extractions
 usaspending-orm==0.7.0  # For USA Spending contract queries
